; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/char/extr_tape_char.c_tapechar_cleanup_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/char/extr_tape_char.c_tapechar_cleanup_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tape_device = type { i32*, %struct.TYPE_2__*, i32* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tapechar_cleanup_device(%struct.tape_device* %0) #0 {
  %2 = alloca %struct.tape_device*, align 8
  store %struct.tape_device* %0, %struct.tape_device** %2, align 8
  %3 = load %struct.tape_device*, %struct.tape_device** %2, align 8
  %4 = getelementptr inbounds %struct.tape_device, %struct.tape_device* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.tape_device*, %struct.tape_device** %2, align 8
  %8 = getelementptr inbounds %struct.tape_device, %struct.tape_device* %7, i32 0, i32 2
  %9 = load i32*, i32** %8, align 8
  %10 = call i32 @unregister_tape_dev(i32* %6, i32* %9)
  %11 = load %struct.tape_device*, %struct.tape_device** %2, align 8
  %12 = getelementptr inbounds %struct.tape_device, %struct.tape_device* %11, i32 0, i32 2
  store i32* null, i32** %12, align 8
  %13 = load %struct.tape_device*, %struct.tape_device** %2, align 8
  %14 = getelementptr inbounds %struct.tape_device, %struct.tape_device* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load %struct.tape_device*, %struct.tape_device** %2, align 8
  %18 = getelementptr inbounds %struct.tape_device, %struct.tape_device* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @unregister_tape_dev(i32* %16, i32* %19)
  %21 = load %struct.tape_device*, %struct.tape_device** %2, align 8
  %22 = getelementptr inbounds %struct.tape_device, %struct.tape_device* %21, i32 0, i32 0
  store i32* null, i32** %22, align 8
  ret void
}

declare dso_local i32 @unregister_tape_dev(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
